[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/TitleScreen/Options/ControlOptionsMenu.gd" type="Script" id=1]
[ext_resource path="res://Settings/KeybindMapping/KeybindSettings.tscn" type="PackedScene" id=2]

[node name="ControlOptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlOptions" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SaveButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -117.0
margin_top = -125.0
text = "Save"

[node name="KeybindSettings" parent="." instance=ExtResource( 2 )]
